fix: overflow issues

--- a/src/Tree/Card.css
+++ b/src/Tree/Card.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
     .name {
         width: 90%;
@@ -15,7 +16,7 @@
         outline: none;
         font-size: 1.2rem;
         resize: none;
-        
+        overflow: hidden;
     }
 
 
